Route preloading, redirect für alte php-Links, Umlaute

--- a/apps/website/src/app/gartenpflege/gartenpflege.component.html
+++ b/apps/website/src/app/gartenpflege/gartenpflege.component.html
@@ -1,8 +1,8 @@
 <div style="text-align:justify">
 	<div class="h2">
-		Fr&uuml;hjahr 2022
+		Frühjahr 2022
 	</div>
-	Auf den Winter folgt der Fr&uuml;hling<br />
+	Auf den Winter folgt der Frühling<br />
 	<br />
 	<div class="h2">
 		Bereiten Sie jetzt Ihren Garten auf die kommende Saison vor
@@ -11,17 +11,17 @@
 		<li>Laubentfernung</li>
 		<li>Auslichtung</li>
 		<li>Vertikutieren</li>
-		<li>Rasenm&auml;hen</li>
+		<li>Rasenmähen</li>
 		<li>Pflanzen</li>
-		<li>Fr&auml;sen</li>
+		<li>Fräsen</li>
 		<li>Kleinpflasterungen</li>
 		<li>Zaunbau</li>
-		<li>D&uuml;ngen</li>
+		<li>Düngen</li>
 		<li>Teichpflege</li>
 		<li>Baumarbeiten</li>
-		<li>Obst- und Ziergeh&ouml;lzr&uuml;ckschnitt</li>
-		<li>Auslichten von B&auml;umen</li>
-		<li>F&auml;llung von Gefahrenb&auml;umen</li>
+		<li>Obst- und Ziergehölzrückschnitt</li>
+		<li>Auslichten von Bäumen</li>
+		<li>Fällung von Gefahrenbäumen</li>
 		<li>Abfuhr und Entsorgung</li>
 		<li>Entfernen der Wurzeln</li>
 		<li>...</li>
