--- a/apps/website/src/app/landschaftspflege/landschaftspflege.component.html
+++ b/apps/website/src/app/landschaftspflege/landschaftspflege.component.html
@@ -1,17 +1,17 @@
 <div style="text-align: justify">
   <h2>Kompetenz, Erfahrung, umfassend</h2>
-  Als staatlich anerkannter Forstwirt mit langj&auml;hriger Berufserfahrung
-  verf&uuml;ge ich &uuml;ber ein umfassendes Fachwissen in der Geh&ouml;lzpflege
-  und Baumf&auml;llung
+  Als staatlich anerkannter Forstwirt mit langjähriger Berufserfahrung
+  verfüge ich über ein umfassendes Fachwissen in der Gehölzpflege
+  und Baum&shy;fällung
   <br />
   <br />
   <h2>Meine Leistungen - Ihre Vorteile</h2>
   <ul>
     <li>Freischneiderarbeiten</li>
-    <li>M&auml;harbeiten</li>
-    <li>Knickr&uuml;ckschnitt</li>
-    <li>Gefahrenbaumf&auml;llung</li>
-    <li>Pflanzungen von B&auml;umen und Str&auml;uchern</li>
+    <li>Mäharbeiten</li>
+    <li>Knickrückschnitt</li>
+    <li>Gefahrenbaumfällung</li>
+    <li>Pflanzungen von Bäumen und Sträuchern</li>
     <li>Durchforstungen</li>
   </ul>
   <br />
