--- a/apps/website/src/app/impressum/impressum.component.html
+++ b/apps/website/src/app/impressum/impressum.component.html
@@ -7,9 +7,8 @@
 	Nico Andresen<br />
 	Jürgenskoppel 29b<br />
 	24253 Probsteierhagen<br />
-	Telefon: 0172 - 66 35 93 5<br />
-	Mail: nicoandresen@gmx.de<br />
-	Web: www.nicosgruenpflege.de<br />
+	Mail: <a href="mailto:nicoandresen@gmx.de">nicoandresen@gmx.de</a><br />
+	Web: <a href="https://www.nicosgruenpflege.de">www.nicosgruenpflege.de</a><br />
 	<br />
 	<span style="font-weight:bold;">Geschäftsführung:</span> Nico Andresen<br />
 	<br />
