--- a/apps/website/src/styles.scss
+++ b/apps/website/src/styles.scss
@@ -1,7 +1,7 @@
 html, body {
 	margin:0px;
 	padding:0px;
-	font-family: Arial;
+	font-family: 'Times New Roman', Times, serif;
 	font-size:14pt;
 }
 
@@ -18,4 +18,8 @@ h2 {
 	font-size:1.2em;
 	font-weight:bold;
   margin: 0 0 5px 0;
+}
+
+div {
+  hyphens: manual;
 }
