--- a/apps/website/src/app/welcome/welcome.component.html
+++ b/apps/website/src/app/welcome/welcome.component.html
@@ -4,14 +4,14 @@
   und akkuraten Arbeitsweise, die Ihnen von mir geboten wird.
 </div>
 <br />
-<div class="h2">Saison 2021</div>
+<div class="h2">Saison 2022</div>
 <table cellspacing="0" cellpadding="0" style="width: 100%">
   <tr>
     <td style="vertical-align: top">
       <table cellspacing="0" cellpadding="0" style="margin-top: 10px">
         <tr>
           <td style="vertical-align: middle">
-            <img src="assets/star.png" alt="Stern" />
+            <img src="assets/star.svg" alt="Stern" width="108" />
           </td>
           <td style="vertical-align: middle; font-size: 1.2em">
             <div style="padding-left: 10px">- Schnell</div>
