--- a/apps/website/src/app/gartenpflege/gartenpflege.component.html
+++ b/apps/website/src/app/gartenpflege/gartenpflege.component.html
@@ -1,42 +1,43 @@
-<div style="text-align:justify">
-	<div class="h2">
-		Frühjahr 2022
-	</div>
-	Auf den Winter folgt der Frühling<br />
-	<br />
-	<div class="h2">
-		Bereiten Sie jetzt Ihren Garten auf die kommende Saison vor
-	</div>
-	<ul>
-		<li>Laubentfernung</li>
-		<li>Auslichtung</li>
-		<li>Vertikutieren</li>
-		<li>Rasenmähen</li>
-		<li>Pflanzen</li>
-		<li>Fräsen</li>
-		<li>Kleinpflasterungen</li>
-		<li>Zaunbau</li>
-		<li>Düngen</li>
-		<li>Teichpflege</li>
-		<li>Baumarbeiten</li>
-		<li>Obst- und Ziergehölzrückschnitt</li>
-		<li>Auslichten von Bäumen</li>
-		<li>Fällung von Gefahrenbäumen</li>
-		<li>Abfuhr und Entsorgung</li>
-		<li>Entfernen der Wurzeln</li>
-		<li>...</li>
-		<li>u. v. m.</li>
-	</ul>
-	<br />
-	<table cellspacing="0" cellpadding="0" style="margin-top:10px;">
-		<tr>
-			<td style="vertical-align:middle">
-				<img src="assets/star.png" alt="Stern" />
-			</td>
-			<td style="vertical-align:middle; font-size:1.2em">
-				<div style="padding-left:10px;font-weight:bold;font-size:1.5em;"><a [routerLink]="kontaktLink">Jetzt Termin sichern</a></div>
-			</td>
-		</tr>
-	</table>
-	Informieren Sie sich kostenlos und unverbindlich per Telefon, Email oder <a [routerLink]="kontaktLink">Kontaktformular</a>. Gern' erstelle ich Ihnen ein attraktives Angebot.
+<div>
+  <h2>Frühjahr 2022</h2>
+  <p>Auf den Winter folgt der Frühling.</p>
+  <h2>Bereiten Sie jetzt Ihren Garten auf die kommende Saison vor</h2>
+  <ul>
+    <li>Laubentfernung</li>
+    <li>Auslichtung</li>
+    <li>Vertikutieren</li>
+    <li>Rasenmähen</li>
+    <li>Pflanzen</li>
+    <li>Fräsen</li>
+    <li>Kleinpflasterungen</li>
+    <li>Zaunbau</li>
+    <li>Düngen</li>
+    <li>Teichpflege</li>
+    <li>Baumarbeiten</li>
+    <li>Obst- und Ziergehölzrückschnitt</li>
+    <li>Auslichten von Bäumen</li>
+    <li>Fällung von Gefahrenbäumen</li>
+    <li>Abfuhr und Entsorgung</li>
+    <li>Entfernen der Wurzeln</li>
+    <li>...</li>
+    <li>u. v. m.</li>
+  </ul>
+  <br />
+  <table cellspacing="0" cellpadding="0" style="margin-top: 10px">
+    <tr>
+      <td style="vertical-align: middle">
+        <img src="assets/star.svg" width="108" alt="Stern" />
+      </td>
+      <td style="vertical-align: middle; font-size: 1.2em">
+        <div style="padding-left: 10px; font-weight: bold; font-size: 1.5em">
+          <a [routerLink]="kontaktLink">Jetzt Termin sichern</a>
+        </div>
+      </td>
+    </tr>
+  </table>
+  <p>
+    Informieren Sie sich kostenlos und unverbindlich per Telefon, Email oder
+    <a [routerLink]="kontaktLink">Kontaktformular</a>. Gern' erstelle ich Ihnen
+    ein attraktives Angebot.
+  </p>
 </div>
