--- a/apps/website/src/app/impressum/impressum.component.html
+++ b/apps/website/src/app/impressum/impressum.component.html
@@ -1,29 +1,31 @@
-<div style="text-align:justify">
-	<div class="h2">
-		Impressum
-	</div>
-	<br />
-	<span style="font-weight:bold;">Inhaltlich verantwortlich</span><br />
-	Nico Andresen<br />
-	Jürgenskoppel 29b<br />
-	24253 Probsteierhagen<br />
-	Mail: <a href="mailto:nicoandresen@gmx.de">nicoandresen@gmx.de</a><br />
-	Web: <a href="https://www.nicosgruenpflege.de">www.nicosgruenpflege.de</a><br />
-	<br />
-	<span style="font-weight:bold;">Geschäftsführung:</span> Nico Andresen<br />
-	<br />
-	<span style="font-weight:bold;">Haftungshinweis:</span>
-	Trotz sorgfältiger inhaltlicher Kontrolle übernehme ich keine Haftung für die Inhalte externer Links. Für den Inhalt der verlinkten Seiten sind ausschließlich deren Betreiber verantwortlich.<br />
-	<br />
-	<span style="font-weight:bold;">Nutzungsrechte:</span>
-	Der gesamte Inhalt dieser Webseite (Texte, Bilder, Grafiken) unterliegt dem Urheberrecht und anderen Gesetzen zum
-	Schutze geistigen Eigentums. Einzelne Elemente der Seite dürfen nur mit ausdrücklicher Erlaubnis  für private oder
-	geschäftliche Zwecke verwendet, kopiert oder verändert werden.<br />
-	Bitte setzen Sie sich bei entsprechenden Anfragen mit mir in Verbindung.<br />
-	<br />
-	<span style="font-weight:bold;">Datenschutz:</span>
-	Ich respektiere Ihre privaten Daten. Wenn Sie innerhalb meiner Seite gebeten werden, Ihre persönlichen Daten einzugeben,
-	so sind diese gemäß den datenschutzrechtlichen Bestimmungen der Bundesrepublik Deutschland geschützt und werden
-	ausschließlich zum angegebenen Zweck verwendet.<br />
-</div>
-
+<h2>Impressum</h2>
+<p>
+  <strong>Inhaltlich verantwortlich:</strong><br />
+  Nico Andresen<br />
+  Jürgenskoppel 29b<br />
+  24253 Probsteierhagen<br />
+  Mail: <a href="mailto:nicoandresen@gmx.de">nicoandresen@gmx.de</a><br />
+  Web: <a href="https://www.nicosgruenpflege.de">www.nicosgruenpflege.de</a>
+</p>
+<p><strong>Geschäftsführung:</strong> Nico Andresen<br /></p>
+<p>
+  <strong>Haftungshinweis:</strong>
+  Trotz sorgfältiger inhaltlicher Kontrolle übernehme ich keine Haftung für die
+  Inhalte externer Links. Für den Inhalt der verlinkten Seiten sind
+  ausschließlich deren Betreiber verantwortlich.<br />
+</p>
+<p>
+  <strong>Nutzungsrechte:</strong>
+  Der gesamte Inhalt dieser Webseite (Texte, Bilder, Grafiken) unterliegt dem
+  Urheberrecht und anderen Gesetzen zum Schutze geistigen Eigentums. Einzelne
+  Elemente der Seite dürfen nur mit ausdrücklicher Erlaubnis für private oder
+  geschäftliche Zwecke verwendet, kopiert oder verändert werden.<br />
+  Bitte setzen Sie sich bei entsprechenden Anfragen mit mir in Verbindung.<br />
+</p>
+<p>
+  <strong>Datenschutz:</strong>
+  Ich respektiere Ihre privaten Daten. Wenn Sie innerhalb meiner Seite gebeten
+  werden, Ihre persönlichen Daten einzugeben, so sind diese gemäß den
+  datenschutzrechtlichen Bestimmungen der Bundesrepublik Deutschland geschützt
+  und werden ausschließlich zum angegebenen Zweck verwendet.<br />
+</p>
