--- a/apps/website/src/app/landschaftspflege/landschaftspflege.component.html
+++ b/apps/website/src/app/landschaftspflege/landschaftspflege.component.html
@@ -1,21 +1,20 @@
-<div style="text-align: justify">
-  <h2>Kompetenz, Erfahrung, umfassend</h2>
+<h2>Kompetenz und Erfahrung</h2>
+<p>
   Als staatlich anerkannter Forstwirt mit langjähriger Berufserfahrung
-  verfüge ich über ein umfassendes Fachwissen in der Gehölzpflege
-  und Baum&shy;fällung
-  <br />
-  <br />
-  <h2>Meine Leistungen - Ihre Vorteile</h2>
-  <ul>
-    <li>Freischneiderarbeiten</li>
-    <li>Mäharbeiten</li>
-    <li>Knickrückschnitt</li>
-    <li>Gefahrenbaumfällung</li>
-    <li>Pflanzungen von Bäumen und Sträuchern</li>
-    <li>Durchforstungen</li>
-  </ul>
-  <br />
+  verfüge ich über ein umfassendes Fachwissen in der Gehölzpflege und
+  Baumfällung
+</p>
+<h2>Meine Leistungen - Ihre Vorteile</h2>
+<ul>
+  <li>Freischneiderarbeiten</li>
+  <li>Mäharbeiten</li>
+  <li>Knickrückschnitt</li>
+  <li>Gefahrenbaumfällung</li>
+  <li>Pflanzungen von Bäumen und Sträuchern</li>
+  <li>Durchforstungen</li>
+</ul>
+<p>
   Informieren Sie sich kostenlos und unverbindlich per Telefon, Email oder
-  <a [routerLink]="kontaktLink">Kontaktformular</a>. Gern' erstelle ich Ihnen ein
-  attraktives Angebot.
-</div>
+  <a [routerLink]="kontaktLink">Kontaktformular</a>. Gern' erstelle ich
+  Ihnen ein attraktives Angebot.
+</p>
