--- a/apps/website/src/app/welcome/welcome.component.html
+++ b/apps/website/src/app/welcome/welcome.component.html
@@ -1,42 +1,25 @@
-<div class="h1">Moin Moin</div>
-<div style="text-align: justify">
-  Willkommen bei nicosgruenpflege. Überzeugen Sie sich von der zügigen
-  und akkuraten Arbeitsweise, die Ihnen von mir geboten wird.
+<h2>Moin Moin</h2>
+<p>
+  Willkommen bei nicosgruenpflege. Überzeugen Sie sich von der zügigen und
+  akkuraten Arbeitsweise, die Ihnen von mir geboten wird.
+</p>
+<h3>Saison 2022</h3>
+<div class="row">
+  <div class="col1">
+    <div class="bullet-area">
+      <img src="assets/star.svg" alt="Stern" width="108" />
+      <ul>
+        <li>Schnell</li>
+        <li>Kompetent</li>
+        <li>Preiswert</li>
+      </ul>
+    </div>
+  </div>
+  <div class="col2">
+    <div class="garden">
+      <img src="assets/nicosgruenpflege.jpg" alt="Garten" /><br>
+    </div>
+    <br>
+    Garten - &copy; 2013 Nico Andresen
+  </div>
 </div>
-<br />
-<div class="h2">Saison 2022</div>
-<table cellspacing="0" cellpadding="0" style="width: 100%">
-  <tr>
-    <td style="vertical-align: top">
-      <table cellspacing="0" cellpadding="0" style="margin-top: 10px">
-        <tr>
-          <td style="vertical-align: middle">
-            <img src="assets/star.svg" alt="Stern" width="108" />
-          </td>
-          <td style="vertical-align: middle; font-size: 1.2em">
-            <div style="padding-left: 10px">- Schnell</div>
-            <div style="padding-left: 30px">- Kompetent</div>
-            <div style="padding-left: 50px">- Preiswert</div>
-          </td>
-        </tr>
-      </table>
-    </td>
-    <td style="vertical-align: top">
-      <div
-        style="
-          background-color: white;
-          margin-left: auto;
-          width: 408px;
-          border: solid black 1px;
-          padding: 4px;
-          text-align: center;
-        "
-      >
-        <img src="assets/nicosgruenpflege.jpg" alt="Garten" />
-      </div>
-      <div style="text-align: right; font-size: 0.7em">
-        Garten - &copy; 2013 Nico Andresen
-      </div>
-    </td>
-  </tr>
-</table>
