--- a/apps/website/src/app/app.component.html
+++ b/apps/website/src/app/app.component.html
@@ -1,22 +1,20 @@
-<div class="pgBg">
+<header>
   <div class="logo">
     <img src="assets/logo.svg" alt="Nico Garten und Landschaftsbau" />
   </div>
   <nicosgruenpflege-menu-bar [items]="topMenuItems"></nicosgruenpflege-menu-bar>
-  <div class="contentBdr">
-    <div class="address">
-      Nico Andresen<br />
-      Jürgenskoppel 29b<br />
-      24253 Probsteierhagen<br />
-      <img src="assets/blank.gif" alt="Telefon" class="picTel" /> :
-      <img src="assets/blank.gif" alt="Email" class="picEmail" /> :
-      <a href="mailto:nicoandresen@gmx.de">nicoandresen@gmx.de</a><br />
-    </div>
-    <div class="content">
-      <router-outlet></router-outlet>
-    </div>
+</header>
+<main>
+  <div class="address">
+    Nico Andresen<br />
+    Jürgenskoppel 29b<br />
+    24253 Probsteierhagen<br />
+    <a href="mailto:nicoandresen@gmx.de">nicoandresen@gmx.de</a>
   </div>
+  <router-outlet></router-outlet>
+</main>
+<footer>
   <nicosgruenpflege-menu-bar
     [items]="bottomMenuItems"
   ></nicosgruenpflege-menu-bar>
-</div>
+</footer>
