--- a/apps/website/src/app/app.component.html
+++ b/apps/website/src/app/app.component.html
@@ -1,6 +1,9 @@
 <header>
   <div class="logo">
-    <img src="assets/logo.svg" alt="Nico Garten und Landschaftsbau" />
+    <picture>
+      <source media="(max-width:630px)" srcset="assets/logo-mobile.svg">
+      <img src="assets/logo.svg" alt="Nico Garten und Landschaftsbau" />
+    </picture>
   </div>
   <nicosgruenpflege-menu-bar [items]="topMenuItems"></nicosgruenpflege-menu-bar>
 </header>
