form auto-complete

--- a/apps/website/src/app/kontakt/kontakt.component.html
+++ b/apps/website/src/app/kontakt/kontakt.component.html
@@ -10,7 +10,7 @@
   <nicosgruenpflege-labeled-input formControlName="name">
     Vor- und Nachname
   </nicosgruenpflege-labeled-input>
-  <nicosgruenpflege-labeled-input formControlName="strasse">
+  <nicosgruenpflege-labeled-input formControlName="strasse" name="street-address">
     Straße und Hausnummer
   </nicosgruenpflege-labeled-input>
   <div class="postal-code-city">
